# mini-workshop-genai

./: .gitignore  README.md  pyproject.toml
data_collection/: news_scraper.py
example_ingest/: README.md  docker-compose.yml  scrape_crypto.py  us_top_50_stocks.csv
example_ingest/config/: airflow.cfg
example_ingest/dags/: eod_stock_transaction_ingestion.py
example_ingest/example_dags/: eod_stock_transaction_ingestion.py  eod_stock_transaction_ingestion_add_validate_schema.py
example_ingest/sftp_upload/: mock_stock_transactions.csv
example_source/: README.md  generate_mock_data.py  mock_stock_trading_data.py  mock_thai_stock_trades.csv  sample_data_understand_schema.json
example_source/sample_project_dbt/: .user.yml  dbt_project.yml  profiles.yml
example_source/sample_project_dbt/models/: source.yml  stg_used_car_price.sql
example_tranform/: tranform_data.py
example_transform/: README.md
example_transform/extract_unstructure_data/: extract_used_car_posts_from_facebook.py  facebook_posts_extract_result.csv  facebook_posts_raw.csv
example_transform/transform_thai_date/: carbon_credit_buyers.csv  parse_thai_date.py
example_undercurrent/: README.md  clean_phone_number.py  parse_thai_date.py  test_clean_phone_number.py  test_parse_thai_date.py
mini-workshop/: docker-compose.yml  example_gemini_api.py  prompt.md
mini-workshop/dags/: cnbc_market_news_analysis_dag.py
workshop/: cnbc_news.csv  prompt.md
workshop-pipeline-cnbc-news/: README.md  scrape.py
workshop/config/: airflow.cfg
workshop/dags/: cnbc_market_news_analysis_dag.py
