[project]
name = "gen-ai-for-de"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.1",
    "apache-airflow-providers-google==15.1.0",
    "beautifulsoup4==4.13.4",
    "dbt-core>=1.10.3",
    "dbt-duckdb>=1.9.4",
    "google-genai>=1.20.0",
    "pandas==2.1.2",
    "pytest>=8.4.1",
    "requests==2.32.3",
]
