[project]
name = "mini-workshop-genai"
version = "0.1.0"
description = ""
authors = [
    {name = "liffy"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.10.3,<2.0.0)",
    "dbt-duckdb (>=1.9.4,<2.0.0)",
    "google-genai (>=1.24.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
